--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rental-car-app",
+  "homepage": "https://jadhav-dipali.github.io/Car-Rental-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
